--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
+    "knex": "^0.95.14",
+    "mysql2": "^2.3.3",
     "typescript": "^4.5.2"
+  },
+  "scripts": {
+    "dev": "ts-node-dev src/server.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "ts-node-dev": "^1.1.8"
   },
   "repository": "git@github.com:miltonsmendes/gama-challenge-four.git"
 }
