--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "dotenv": "^10.0.0",
     "nodemon": "^2.0.15",
     "ts-node-dev": "^1.1.8"
   },
